@@ -9,6 +9,16 @@
 	people have reported.
 	* menu.m: moved some stuff around to better allow ui testing.
 
+1999-09-07  Adam Fedor  <fedor@gnu.org>
+
+	* buttons.m ([buttonsController -applicationDidFinishLaunching:]): 
+	Move main menu creation to here, since it screws up xdps if it's
+	in main - must look into this...
+
+1999-08-21  Richard frith-Macdonald <richard@brainstorm.co.uk>
+
+	Added simple menu with 'quit' item for all test apps.
+
 1999-07-30  Michael Hanni  <mhanni@sprintmail.com>
 
 	* Several images for new popup in popupbuttons.app:
